load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["chat.go"],
    importpath = "github.com/prestonvanloon/libp2p-chat/chat",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_ipfs_go_cid//:go_default_library",
        "@com_github_ipfs_go_ipfs_addr//:go_default_library",
        "@com_github_libp2p_go_libp2p//:go_default_library",
        "@com_github_libp2p_go_libp2p_kad_dht//:go_default_library",
        "@com_github_libp2p_go_libp2p_net//:go_default_library",
        "@com_github_libp2p_go_libp2p_peerstore//:go_default_library",
        "@com_github_multiformats_go_multihash//:go_default_library",
    ],
)

go_binary(
    name = "chat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
