load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/prestonvanloon/libp2p-chat/keygen",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_libp2p_go_libp2p_crypto//:go_default_library",
        "@com_github_libp2p_go_libp2p_peer//:go_default_library",
    ],
)

go_binary(
    name = "keygen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
