load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["relay.go"],
    importpath = "github.com/prestonvanloon/libp2p-chat/relay",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_libp2p_go_libp2p//:go_default_library",
        "@com_github_libp2p_go_libp2p_circuit//:go_default_library",
        "@com_github_libp2p_go_libp2p_crypto//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
    ],
)

go_binary(
    name = "relay",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":go_default_library"],
)

container_push(
    name = "push_image",
    format = "Docker",
    image = ":image",
    registry = "gcr.io",
    repository = "prysmaticlabs/chat/relay",
    tag = "latest",
    tags = ["manual"],
)
