load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["query.go"],
    importpath = "github.com/prestonvanloon/libp2p-chat/dht/query",
    visibility = ["//visibility:private"],
    deps = [
        "//utils:go_default_library",
        "@com_github_gogo_protobuf//io:go_default_library",
        "@com_github_libp2p_go_libp2p//:go_default_library",
        "@com_github_libp2p_go_libp2p_kad_dht//opts:go_default_library",
        "@com_github_libp2p_go_libp2p_kad_dht//pb:go_default_library",
        "@com_github_libp2p_go_libp2p_peer//:go_default_library",
    ],
)

go_binary(
    name = "query",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
